--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ TypeScript parte 1 evoluindo seu JavaScript/package-lock.json
 TypeScript parte 1 evoluindo seu JavaScript/package-lock.json
 TypeScript parte 1 evoluindo seu JavaScript/package-lock.json
 TypeScript parte 1 evoluindo seu JavaScript/package-lock.json
+TypeScript parte 1 evoluindo seu JavaScript/package-lock.json
